fix bug where review spacing doesn't appear

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -50,6 +50,7 @@
     padding: 10px;
     font-family: Lato;
     padding-bottom: 10px;
+    white-space: pre-wrap;
     /*border-bottom: 2px solid $brand-green;*/
   }
   .circle-frame{
